# snowplower_mono

./: .gitignore  LICENSE  move_base_notes.txt  network_bot.sh  network_ctrl.sh  real_time_stm32_notes.txt  rtk_gps_notes.txt
docs/: README.md  _config.yaml
drive_controller_ws/src/: README.md
drive_controller_ws/src/hw_base/: CMakeLists.txt  package.xml
drive_controller_ws/src/hw_base/include/hw_base/: hw_hardware.h
drive_controller_ws/src/hw_base/launch/: base.launch
drive_controller_ws/src/hw_base/src/: hw_base.cpp  hw_hardware.cpp
drive_controller_ws/src/hw_control/: CMakeLists.txt  package.xml
drive_controller_ws/src/hw_description/: CMakeLists.txt  package.xml
drive_controller_ws/src/hw_description/launch/: description.launch
drive_controller_ws/src/hw_description/urdf/: husky.urdf.xacro  wheel.urdf.xacro
drive_controller_ws/src/hw_navigation/: CMakeLists.txt  package.xml
drive_controller_ws/src/hw_navigation/config/: costmap_common.yaml  costmap_global_static.yaml  costmap_local.yaml  planner.yaml
drive_controller_ws/src/hw_navigation/launch/: move_base.launch  move_base_demo.launch
gps_calibration/: 0_record_calibration_point.py  1_get_calibration.py  2_calibrate.py  3_point_histogram.py  benchmark.waypoints  front_real.waypoints  full.waypoints  out.waypoints  out_full.waypoints  out_rev.waypoints  square.waypoints  test.waypoints  test_rev.waypoints
gps_calibration/drafts/: coordinate_transform.py  mavlink_connect.py
gps_calibration/params/: 2023_07_15.param  2023_07_16.param  2023_07_19.param  2023_07_19_large_curve.param  2023_07_22.param
gps_calibration/points/: point_0.csv  point_0_0708.csv  point_1.csv  point_1_0708.csv  point_2.csv  point_2_0708.csv  point_n.waypoints
real_time/adv_serial_test/: adv_serial_test.ino
real_time/libraries/: readme.txt
real_time/libraries/ros_lib/: ArduinoHardware.h
real_time/serial_test/: serial_test.ino
real_time/slam_rpi_shield/: slam_rpi_shield.ino
real_time/slam_rpi_shield_odom/: slam_rpi_shield_odom.ino
real_time/stm32_isr_test/: stm32_isr_test.ino
serial_comm_test/: .main.cpp.swp  .main_adv.cpp.swp  a.out  main.cpp  main_adv.cpp
(+3 files in other folders)
