<?xml version="1.0"?>
<package format="2">
  <name>hw_description</name>
  <version>0.0.0</version>
  <description>The hw_description package</description>
  <maintainer email="tianyi@todo.todo">tianyi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <exec_depend>roslaunch</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
