<?xml version="1.0"?>
<package format="2">
  <name>hw_navigation</name>
  <version>0.0.0</version>
  <description>The hw_navigation package</description>

  <maintainer email="tianyi@todo.todo">tianyi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <export>
  </export>
</package>
